fix margin collapsing of #nav

--- a/static/stylus/styles.styl
+++ b/static/stylus/styles.styl
@@ -1,3 +1,7 @@
+@import schemes
+@import image
+@import user
+
 html, body, ul, li
   margin 0
   padding 0
@@ -18,9 +22,15 @@ body
   div, ul, li
     padding 0 1em
     float left
-  li.current
-    background #555
-    color #fff
+  li
+    transition all 1s
+    cursor pointer
+    &.current
+      background #555
+      color #fff
+    &:hover
+      color #555
+      background #ddd
   #user
     padding-right 1em
     float right
@@ -41,111 +51,3 @@ body
   font-size 12px
   span
     cursor pointer
-
-#logout
-  color #ccc
-
-#login, #signup, #password-reset
-  background #fff
-  display none
-  position fixed
-  left 50%
-  top 50%
-  height 100px
-  width 160px
-  margin-left -100px
-  margin-top -70px
-  padding 20px
-  box-shadow 0 0 8px #777
-  input
-    width 100%
-    height 12px
-    margin 5px 0
-  .submit
-    cursor pointer
-    font-size 12px
-    padding 3px 6px
-    margin 6px 0
-    border 1px solid #777
-    display inline-block
-
-#image
-  width 100%
-  height 60vh
-  background-size cover
-  background-position center center
-  text-align center
-  transition background-position 1s linear
-  position relative
-
-#colors
-  position absolute
-  left 24px
-  bottom 24px
-
-#colors .color
-  float left
-  width 20px
-  height 20px
-  margin 6px 6px 0 0
-  box-shadow 0 0 3px rgba(0, 0, 0, .5)
-  &:after
-    clear both
-    content ""
-    display block
-
-#schemes
-  margin-top 15px
-  clear both
-  &:after
-    clear both
-    display block
-    content ""
-
-.scheme
-  margin-top 30px
-  width 25%
-  padding 0 2%
-  box-sizing border-box
-  display inline-block
-  &::after
-    clear both
-    display block
-    content ""
-  .colors
-    box-shadow: 3px 0 3px -3px rgba(0, 0, 0, .3) // box shadow for right side
-    &::after
-      clear both
-      display block
-      content ""
-  .color
-    box-shadow: -3px 0 3px -3px rgba(0, 0, 0, .3) // box shadow for left side
-    float left
-    width 20%
-    height 0
-    padding-bottom 20% // based on parent elem's width
-  .button
-    display none !important
-    float left
-    cursor pointer
-    line-height 36px
-    font-size 18px
-    color #ccc
-    display inline-block
-    padding-left 12px
-    text-align center
-    transition color .3s
-  .fa-heart-o
-    border-left 1px solid #ccc
-    &.selected
-      color red
-  .fa-trash-o.selected
-    color black
-
-@media (max-width: 980px)
-  .scheme
-    width 33%
-
-@media (max-width: 600px)
-  .scheme
-    width 50%
